# game-of-life

./: .gitmodules  CMakeLists.txt  README.md  game-of-life.sln  game-of-life.vcxproj  game-of-life.vcxproj.filters  grid-bits.cpp  grid-bits.h  imgui.ini
src/: game-of-life.cpp  game-of-life.h  grid.cpp  grid.h  main.cpp
